Armado de main.html, con sus configuraciones en main.js, index.html + creacion de los componentes a utilizar a futuro

--- a/src/components/main.html
+++ b/src/components/main.html
@@ -1,1 +1,20 @@
-<main></main>
+<main class="h-dvh flex flex-col justify-around items-center">
+<div class="flex flex-col items-center">
+    <div>
+        <h1 class="text-texto text-center m-2 font-bold">Estudio Jurídico Rodriguez y Asociados</h1>
+        <h2 class="text-texto text-center text-2xl font-medium">Especialistas en Derecho Penal y Laboral</h2>
+    </div>
+    <div class="mt-6 p-2 flex flex-col items-center">
+          <a href="https://wa.link/k1ktf5" target="_blank" rel="noopener noreferrer" class="bg-naranja text-textonav px-6 py-3 rounded-xl font-bold hover:bg-texto">Solicitá tu consulta gratis</a>
+          <p class="text-sm text-center text-gray-600 mt-2">Respondemos en menos de 24hs</p>
+    </div>
+
+</div>
+<div class="flex justify-evenly items-center w-[100%]">
+    <p class="max-w-[20%] text-texto text-xl font-medium">Somos el estudio de abogados mas grande cuando hablamos de</p>
+    <img src="/src/assets/images/flecha.svg" class="h-16 w-16" alt="Flecha apuntando al área de especialización legal">
+    <p class="text-texto text-center text-2xl font-bold"><span id="texto-dinamico"></span></p>
+</div>
+
+</main>
+
