--- a/src/components/main.html
+++ b/src/components/main.html
@@ -1,20 +1,39 @@
-<main class="h-dvh flex flex-col justify-around items-center">
-<div class="flex flex-col items-center">
-    <div>
-        <h1 class="text-texto text-center m-2 font-bold">Estudio Jurídico Rodriguez y Asociados</h1>
-        <h2 class="text-texto text-center text-2xl font-medium">Especialistas en Derecho Penal y Laboral</h2>
+<main class="min-h-screen flex flex-col justify-around items-center px-4 py-8">
+    <div class="flex flex-col items-center text-center gap-6">
+      <div class="flex flex-col items-center gap-3">
+        <img class="h-20 w-20" src="/src/assets/images/PNG-LOGO.png" alt="LOGO NEGRO">
+        <h1 class="text-texto font-bold text-2xl sm:text-3xl md:text-4xl lg:text-5xl">
+          Estudio Jurídico Rodriguez y Asociados
+        </h1>
+        <h2 class="text-texto text-lg font-medium sm:text-xl md:text-2xl lg:text-3xl">
+          Especialistas en Derecho Penal, Accidentes Laborales y <br> Accidentes de Tránsito
+        </h2>
+      </div>
+  
+      <div class="mt-6 p-2 flex flex-col items-center">
+        <a class="px-4 py-2 border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] text-textonav font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
+            Solicitá una consulta gratuita
+          </a>
+          
+        <p class="text-sm text-gray-600 mt-2">Respondemos en menos de 24hs</p>
+      </div>
     </div>
-    <div class="mt-6 p-2 flex flex-col items-center">
-          <a href="https://wa.link/k1ktf5" target="_blank" rel="noopener noreferrer" class="bg-naranja text-textonav px-6 py-3 rounded-xl font-bold hover:bg-texto">Solicitá tu consulta gratis</a>
-          <p class="text-sm text-center text-gray-600 mt-2">Respondemos en menos de 24hs</p>
+  
+    <div class="flex flex-col lg:flex-row justify-evenly items-center w-full gap-6 mt-10 text-center">
+      <p class="max-w-[90%] lg:max-w-[20%] text-texto text-lg lg:text-xl font-medium">
+        Somos el estudio de abogados más grande cuando hablamos de
+      </p>
+    <!-- Ícono solo para desktop -->
+    <div class="hidden lg:block">
+        <i class="fas fa-arrow-right text-texto text-4xl"></i>
     </div>
-
-</div>
-<div class="flex justify-evenly items-center w-[100%]">
-    <p class="max-w-[20%] text-texto text-xl font-medium">Somos el estudio de abogados mas grande cuando hablamos de</p>
-    <img src="/src/assets/images/flecha.svg" class="h-16 w-16" alt="Flecha apuntando al área de especialización legal">
-    <p class="text-texto text-center text-2xl font-bold"><span id="texto-dinamico"></span></p>
-</div>
-
-</main>
-
+    <!-- Ícono solo para mobile -->
+    <div class="block lg:hidden">
+        <i class="fas fa-arrow-down text-texto text-4xl"></i>
+    </div>
+    <p class="text-texto text-2xl font-bold">
+        <span id="texto-dinamico"></span>
+      </p>
+    </div>
+  </main>
+  
