--- a/src/style.css
+++ b/src/style.css
@@ -14,10 +14,6 @@
 
 @layer base {
   :root {
-    font-family: "inria-sans", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
     background-color: #242424;
@@ -29,6 +25,7 @@
   }
 
   body {
+    @apply font-sans;
     margin: 0;
     display: flex;
     place-items: center;
