Agregado de rounded a todos los botones y tarjetas para darle mejor estetica a la pagina

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -13,7 +13,7 @@
 <div class="flex-1 min-w-[280px] max-w-xl">
     <h2 class="text-xl font-bold mb-4 text-textonav text-center">Ubicación</h2>
     
-    <div class="bg-naranja border-[3px] border-black shadow-[12px_12px_0_#000] translate-x-[-6px] translate-y-[-6px] transition-all duration-300 hover:translate-x-[-6px] hover:translate-y-[-6px] rounded-md overflow-hidden mb-3">
+    <div class="bg-naranja border-[3px]  border-black shadow-[12px_12px_0_#000] translate-x-[-6px] translate-y-[-6px] transition-all duration-300 hover:translate-x-[-6px] hover:translate-y-[-6px] rounded-xl overflow-hidden mb-3">
       <div id="map" class="w-full h-[250px] md:h-[350px]"></div>
     </div>
   
