--- a/src/components/sobrenos.html
+++ b/src/components/sobrenos.html
@@ -18,22 +18,22 @@
         <div class="flex flex-col md:flex-row justify-center items-center gap-10">
             
             <!-- Tarjeta 1 -->
-            <div class="bg-textonav rounded-xl shadow-md px-10 py-8 w-60">
-              <p id="clientes" class="text-4xl font-semibold text-texto">0</p>
-              <p class="mt-2 text-sm text-texto">clientes atentidos</p>
-            </div>
+            <div class="w-[280px] h-[150px] bg-textonav text-texto border-[3px] border-black shadow-[12px_12px_0px_black] rounded-xl transition-all duration-300 p-6 flex flex-col items-center justify-center">
+                <p id="clientes" class="text-3xl font-extrabold select-none">0</p>
+                <p class="text-sm mt-1 font-medium select-none">clientes atendidos</p>
+              </div>
         
             <!-- Tarjeta 2 -->
-            <div class="bg-textonav rounded-xl shadow-md px-10 py-8 w-60">
-              <p id="experiencias" class="text-4xl font-semibold text-texto">0</p>
-              <p class="mt-2 text-sm text-texto">años de experiencia</p>
-            </div>
+            <div class="w-[280px] h-[150px] bg-textonav text-texto border-[3px] border-black shadow-[12px_12px_0px_black] rounded-xl transition-all duration-300 p-6 flex flex-col items-center justify-center">
+                <p id="experiencias" class="text-3xl font-extrabold select-none">0</p>
+                <p class="text-sm mt-1 font-medium select-none">años de experiencia</p>
+              </div>
         
             <!-- Tarjeta 3 -->
-            <div class="bg-textonav rounded-xl shadow-md px-10 py-8 w-60">
-              <p id="tasa" class="text-4xl font-semibold text-texto">0</p>
-              <p class="mt-2 text-sm text-texto">tasa de experiencia</p>
-            </div>
+            <div class="w-[280px] h-[150px] bg-textonav text-texto border-[3px] border-black shadow-[12px_12px_0px_black] rounded-xl transition-all duration-300 p-6 flex flex-col items-center justify-center">
+                <p id="tasa" class="text-3xl font-extrabold select-none">0%</p>
+                <p class="text-sm mt-1 font-medium select-none">tasa de experiencia</p>
+              </div>
         </div>
     </div>
 
