Ajustando detalles en footer, servicios y agregado de preguntas frecuentes

--- a/src/components/servicios.html
+++ b/src/components/servicios.html
@@ -13,9 +13,9 @@
         
         <!-- Tarjeta 1 -->
         <div class="w-[300px] h-[250px] rounded-xl -translate-x-[6px] -translate-y-[6px] bg-naranja border-[3px] border-black shadow-[12px_12px_0_#000] overflow-hidden transition-all duration-300 hover:-translate-y-[6px]">
-          <div class="w-full h-8 bg-textonav text-texto font-extrabold text-sm px-3 py-1 border-b-[3px] border-black">Accidentes de Tránsito</div>
-          <div class="p-3 text-sm font-semibold text-textonav">
-            Asistencia legal ante siniestros viales.
+          <div class="w-full h-8 bg-textonav text-texto font-extrabold text-ml px-3 py-1 border-b-[3px] border-black tracking-wider">ACCIDENTES DE TRANSITO</div>
+          <div class="p-3 text-ml tracking-wider uppercase font-semibold text-textonav">
+            ASISTENCIA LEGAL ANTE SINIESTROS VIALES.
             <button class="mt-3 px-3 py-1 border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none">
               Saber más
             </button>
@@ -24,10 +24,10 @@
   
         <!-- Tarjeta 2 -->
         <div class="w-[300px] h-[250px] rounded-xl -translate-x-[6px] -translate-y-[6px] bg-naranja border-[3px] border-black shadow-[12px_12px_0_#000] overflow-hidden transition-all duration-300 hover:-translate-y-[6px]">
-          <div class="w-full h-8 bg-textonav text-texto font-extrabold text-sm px-3 py-1 border-b-[3px] border-black">Accidentes Laboral</div>
-          <div class="p-3 text-sm font-semibold text-textonav">
+          <div class="w-full h-8 bg-textonav text-texto font-extrabold text-ml px-3 py-1 border-b-[3px] border-black uppercase tracking-wider">Accidentes Laboral</div>
+          <div class="p-3 text-ml font-semibold text-textonav uppercase tracking-wider">
             Protección ante lesiones en el trabajo.
-            <button class="mt-3 px-3 py-1 border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none">
+            <button class="mt-3 px-3 py-1 border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none uppercase">
               Saber más
             </button>
           </div>
@@ -35,10 +35,10 @@
   
         <!-- Tarjeta 3 -->
         <div class="w-[300px] h-[250px] rounded-xl -translate-x-[6px] -translate-y-[6px] bg-naranja border-[3px] border-black shadow-[12px_12px_0_#000] overflow-hidden transition-all duration-300 hover:-translate-y-[6px]">
-          <div class="w-full h-8 bg-textonav text-texto font-extrabold text-sm px-3 py-1 border-b-[3px] border-black">Despidos</div>
-          <div class="p-3 text-sm font-semibold text-textonav">
+          <div class="w-full h-8 bg-textonav text-texto font-extrabold text-ml px-3 py-1 border-b-[3px] border-black uppercase tracking-wider">Despidos</div>
+          <div class="p-3 text-ml font-semibold text-textonav uppercase tracking-wider">
             Defensa ante despidos injustificados.
-            <button class="mt-3 px-3 py-1 border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background  hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none">
+            <button class="mt-3 px-3 py-1 border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background  hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none uppercase">
               Saber más
             </button>
           </div>
@@ -46,10 +46,10 @@
   
         <!-- Tarjeta 4 -->
         <div class="w-[300px] h-[250px] rounded-xl -translate-x-[6px] -translate-y-[6px] bg-naranja border-[3px] border-black shadow-[12px_12px_0_#000] overflow-hidden transition-all duration-300 hover:-translate-y-[6px]">
-          <div class="w-full h-8 bg-textonav text-texto font-extrabold text-sm px-3 py-1 border-b-[3px] border-black">Derecho Penal</div>
-          <div class="p-3 text-sm font-semibold text-textonav">
+          <div class="w-full h-8 bg-textonav text-texto font-extrabold text-ml px-3 py-1 border-b-[3px] border-black uppercase tracking-wider">Derecho Penal</div>
+          <div class="p-3 text-ml font-semibold text-textonav uppercase tracking-wider">
             Asesoramiento y defensa penal integral.
-            <button class="mt-3 px-3 py-1 border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none">
+            <button class="mt-3 px-3 py-1 border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none uppercase">
               Saber más
             </button>
           </div>
@@ -57,10 +57,10 @@
   
         <!-- Tarjeta 5 -->
         <div class="w-[300px] h-[250px] rounded-xl -translate-x-[6px] -translate-y-[6px] bg-naranja border-[3px] border-black shadow-[12px_12px_0_#000] overflow-hidden transition-all duration-300 hover:-translate-y-[6px]">
-          <div class="w-full h-8 bg-textonav text-texto font-extrabold text-sm px-3 py-1 border-b-[3px] border-black">Contratos</div>
-          <div class="p-3 text-sm font-semibold text-textonav">
+          <div class="w-full h-8 bg-textonav text-texto font-extrabold text-ml px-3 py-1 border-b-[3px] border-black uppercase tracking-wider">Contratos</div>
+          <div class="p-3 text-ml font-semibold text-textonav uppercase tracking-wider">
             Redacción y revisión de contratos legales.
-            <button class="mt-3 px-3 py-1 border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none">
+            <button class="mt-3 px-3 py-1 border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none uppercase">
               Saber más
             </button>
           </div>
@@ -68,10 +68,10 @@
   
         <!-- Tarjeta 6 -->
         <div class="w-[300px] h-[250px] rounded-xl -translate-x-[6px] -translate-y-[6px] bg-naranja border-[3px] border-black shadow-[12px_12px_0_#000] overflow-hidden transition-all duration-300 hover:-translate-y-[6px]">
-          <div class="w-full h-8 bg-textonav text-texto font-extrabold text-sm px-3 py-1 border-b-[3px] border-black">Sucesiones</div>
-          <div class="p-3 text-sm font-semibold text-textonav">
+          <div class="w-full h-8 bg-textonav text-texto font-extrabold text-ml px-3 py-1 border-b-[3px] border-black uppercase tracking-wider">Sucesiones</div>
+          <div class="p-3 text-ml font-semibold text-textonav uppercase tracking-wider">
             Tramitación de herencias y testamentos.
-            <button class="mt-3 px-3 py-1 border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none">
+            <button class="mt-3 px-3 py-1 border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none uppercase">
               Saber más
             </button>
           </div>
