--- a/src/components/main.html
+++ b/src/components/main.html
@@ -12,7 +12,7 @@
   
       <div class="mt-6 p-2 flex flex-col items-center">
         <a class="px-4 py-2 rounded-xl border-[3px] border-black bg-naranja shadow-[3px_3px_0_#000] text-textonav font-bold transition-all duration-300 hover:translate-x-[1.5px] hover:translate-y-[1.5px] hover:shadow-[1.5px_1.5px_0_#000] hover:bg-background hover:text-texto active:translate-x-[3px] active:translate-y-[3px] active:shadow-none cursor-pointer">
-            Solicitá una consulta gratuita
+            SOLICITÁ TU CONSULTA GRATUITA
           </a>
           
         <p class="text-sm text-gray-600 mt-2">Respondemos en menos de 24hs</p>
